@@ -31,31 +31,46 @@ import java.lang.reflect.Method;
  */
 @SuppressWarnings("deprecation")
 public class h2odriver extends Configured implements Tool {
+  static {
+    String javaVersionString = System.getProperty("java.version");
+    Pattern p = Pattern.compile("1\\.([0-9]*)(.*)");
+    Matcher m = p.matcher(javaVersionString);
+    boolean b = m.matches();
+    if (! b) {
+      System.out.println("Could not parse java version: " + javaVersionString);
+      System.exit(1);
+    }
+    javaMajorVersion = Integer.parseInt(m.group(1));
+  }
+
   final static int DEFAULT_CLOUD_FORMATION_TIMEOUT_SECONDS = 120;
   final static int CLOUD_FORMATION_SETTLE_DOWN_SECONDS = 2;
   final static int DEFAULT_EXTRA_MEM_PERCENT = 10;
 
   // Options that are parsed by the main thread before other threads are created.
+  static final int javaMajorVersion;
   static String jobtrackerName = null;
   static int numNodes = -1;
   static String outputPath = null;
   static String mapperXmx = null;
   static int extraMemPercent = -1;            // Between 0 and 10, typically.  Cannot be negative.
+  static String mapperPermSize = null;
   static String driverCallbackIp = null;
   static int driverCallbackPort = 0;          // By default, let the system pick the port.
   static String network = null;
   static boolean disown = false;
   static String clusterReadyFileName = null;
-  static String hadoopJobID = "";
+  static String hadoopJobId = "";
+  static String applicationId = "";
   static int cloudFormationTimeoutSeconds = DEFAULT_CLOUD_FORMATION_TIMEOUT_SECONDS;
   static int nthreads = -1;
   static int basePort = -1;
   static boolean beta = false;
   static boolean enableRandomUdpDrop = false;
   static boolean enableExceptions = false;
-  static boolean enableVerboseGC = false;
-  static boolean enablePrintGCDetails = false;
-  static boolean enablePrintGCTimeStamps = false;
+  static boolean enableVerboseGC = true;
+  static boolean enablePrintGCDetails = true;
+  static boolean enablePrintGCTimeStamps = true;
   static boolean enableVerboseClass = false;
   static boolean enablePrintCompilation = false;
   static boolean enableExcludeMethods = false;
@@ -65,9 +80,11 @@ public class h2odriver extends Configured implements Tool {
   static int debugPort = 5005;    // 5005 is the default from IDEA
   static String flowDir = null;
   static ArrayList<String> extraArguments = new ArrayList<String>();
+  static ArrayList<String> extraJvmArguments = new ArrayList<String>();
   static String jksFileName = null;
   static String jksPass = null;
   static boolean hashLogin = false;
+  static boolean ldapLogin = false;
   static String loginConfFileName = null;
   static String userName = System.getProperty("user.name");
 
@@ -80,6 +97,9 @@ public class h2odriver extends Configured implements Tool {
   volatile boolean clusterHasNodeWithLocalhostIp = false;
   volatile boolean shutdownRequested = false;
   volatile AtomicInteger numNodesStarted = new AtomicInteger();
+  volatile AtomicInteger numNodesReportingFullCloudSize = new AtomicInteger();
+  volatile String clusterIp = null;
+  volatile int clusterPort = -1;
 
   public void setShutdownRequested() {
     shutdownRequested = true;
@@ -89,7 +109,17 @@ public class h2odriver extends Configured implements Tool {
     return shutdownRequested;
   }
 
-  public boolean usingYarn() {
+  public void setClusterIpPort(String ip, int port) {
+    clusterIp = ip;
+    clusterPort = port;
+  }
+
+  public String getClusterUrl() {
+    String scheme = (jksFileName == null) ? "http" : "https";
+    return scheme + "://" + clusterIp + ":" + clusterPort;
+  }
+
+  public static boolean usingYarn() {
     Class clazz = null;
     try {
       clazz = Class.forName("water.hadoop.H2OYarnDiagnostic");
@@ -97,6 +127,24 @@ public class h2odriver extends Configured implements Tool {
     catch (Exception ignore) {}
 
     return (clazz != null);
+  }
+
+  public static void maybePrintYarnLogsMessage(boolean printExtraNewlines) {
+    if (usingYarn()) {
+      if (printExtraNewlines) {
+        System.out.println();
+      }
+
+      System.out.println("For YARN users, logs command is 'yarn logs -applicationId " + applicationId + "'");
+
+      if (printExtraNewlines) {
+        System.out.println();
+      }
+    }
+  }
+
+  public static void maybePrintYarnLogsMessage() {
+    maybePrintYarnLogsMessage(true);
   }
 
   public static class H2ORecordReader extends RecordReader<Text, Text> {
@@ -143,6 +191,31 @@ public class h2odriver extends Configured implements Tool {
     }
   }
 
+  public static void killJobAndWait(Job job) {
+    boolean killed = false;
+
+    try {
+      System.out.println("Attempting to clean up hadoop job...");
+      job.killJob();
+      for (int i = 0; i < 5; i++) {
+        if (job.isComplete()) {
+          System.out.println("Killed.");
+          killed = true;
+          break;
+        }
+
+        Thread.sleep(1000);
+      }
+    }
+    catch (Exception ignore) {
+    }
+    finally {
+      if (! killed) {
+        System.out.println("Kill attempt failed, please clean up job manually.");
+      }
+    }
+  }
+
   /**
    * Handle Ctrl-C and other catchable shutdown events.
    * If we successfully catch one, then try to kill the hadoop job if
@@ -164,28 +237,16 @@ public class h2odriver extends Configured implements Tool {
       }
       _complete = true;
 
-      boolean killed = false;
-
       try {
-        System.out.println("Attempting to clean up hadoop job...");
-        job.killJob();
-        for (int i = 0; i < 5; i++) {
-          if (job.isComplete()) {
-            System.out.println("Killed.");
-            killed = true;
-            break;
-          }
-
-          Thread.sleep(1000);
+        if (job.isComplete()) {
+          return;
         }
       }
       catch (Exception ignore) {
       }
-      finally {
-        if (! killed) {
-          System.out.println("Kill attempt failed, please clean up job manually.");
-        }
-      }
+
+      killJobAndWait(job);
+      maybePrintYarnLogsMessage();
     }
   }
 
@@ -199,7 +260,7 @@ public class h2odriver extends Configured implements Tool {
     private void createClusterReadyFile(String ip, int port) throws Exception {
       String fileName = clusterReadyFileName + ".tmp";
       String text1 = ip + ":" + port + "\n";
-      String text2 = hadoopJobID + "\n";
+      String text2 = hadoopJobId + "\n";
       try {
         File file = new File(fileName);
         BufferedWriter output = new BufferedWriter(new FileWriter(file));
@@ -262,11 +323,15 @@ public class h2odriver extends Configured implements Tool {
             // Do this under a synchronized block to avoid getting multiple cluster ready notification files.
             synchronized (h2odriver.class) {
               if (! clusterIsUp) {
-                if (clusterReadyFileName != null) {
-                  createClusterReadyFile(msg.getEmbeddedWebServerIp(), msg.getEmbeddedWebServerPort());
-                  System.out.println("Cluster notification file (" + clusterReadyFileName + ") created.");
+                int n = numNodesReportingFullCloudSize.incrementAndGet();
+                if (n == numNodes) {
+                  if (clusterReadyFileName != null) {
+                    createClusterReadyFile(msg.getEmbeddedWebServerIp(), msg.getEmbeddedWebServerPort());
+                    System.out.println("Cluster notification file (" + clusterReadyFileName + ") created.");
+                  }
+                  setClusterIpPort(msg.getEmbeddedWebServerIp(), msg.getEmbeddedWebServerPort());
+                  clusterIsUp = true;
                 }
-                clusterIsUp = true;
               }
             }
           }
@@ -542,6 +607,10 @@ public class h2odriver extends Configured implements Tool {
         i++; if (i >= args.length) { usage(); }
         extraMemPercent = Integer.parseInt(args[i]);
       }
+      else if (s.equals("-mapperPermSize")) {
+        i++; if (i >= args.length) { usage(); }
+        mapperPermSize = args[i];
+      }
       else if (s.equals("-driverif")) {
         i++; if (i >= args.length) { usage(); }
         driverCallbackIp = args[i];
@@ -624,6 +693,11 @@ public class h2odriver extends Configured implements Tool {
         enablePrintGCDetails = true;
         enablePrintGCTimeStamps = true;
       }
+      else if (s.equals("-nogc")) {
+        enableVerboseGC = false;
+        enablePrintGCDetails = false;
+        enablePrintGCTimeStamps = false;
+      }
       else if (s.equals("-flow_dir")) {
         i++; if (i >= args.length) { usage(); }
         flowDir = args[i];
@@ -631,6 +705,10 @@ public class h2odriver extends Configured implements Tool {
       else if (s.equals("-J")) {
         i++; if (i >= args.length) { usage(); }
         extraArguments.add(args[i]);
+      }
+      else if (s.equals("-JJ")) {
+        i++; if (i >= args.length) { usage(); }
+        extraJvmArguments.add(args[i]);
       }
       else if (s.equals("-jks")) {
         i++; if (i >= args.length) { usage(); }
@@ -641,8 +719,10 @@ public class h2odriver extends Configured implements Tool {
         jksPass = args[i];
       }
       else if (s.equals("-hash_login")) {
-        i++; if (i >= args.length) { usage(); }
         hashLogin = true;
+      }
+      else if (s.equals("-ldap_login")) {
+        ldapLogin = true;
       }
       else if (s.equals("-login_conf")) {
         i++; if (i >= args.length) { usage(); }
@@ -675,6 +755,12 @@ public class h2odriver extends Configured implements Tool {
     // Check for sane arguments.
     if (! mapperXmx.matches("[1-9][0-9]*[mgMG]")) {
       error("-mapperXmx invalid (try something like -mapperXmx 4g)");
+    }
+
+    if (mapperPermSize != null) {
+      if (!mapperPermSize.matches("[1-9][0-9]*[mgMG]")) {
+        error("-mapperPermSize invalid (try something like -mapperPermSize 512m)");
+      }
     }
 
     if (extraMemPercent < 0) {
@@ -757,7 +843,7 @@ public class h2odriver extends Configured implements Tool {
     while (true) {
       if (clusterFailedToComeUp) {
         System.out.println("ERROR: At least one node failed to come up during cluster formation");
-        job.killJob();
+        killJobAndWait(job);
         return 4;
       }
 
@@ -781,7 +867,7 @@ public class h2odriver extends Configured implements Tool {
             System.out.println("NOTE: You may want to specify the -network option, which lets you specify the network interface the mappers bind to.");
             System.out.println("NOTE: Typical usage is:  -network a.b.c.d/24");
           }
-          job.killJob();
+          killJobAndWait(job);
           return CLUSTER_ERROR_TIMEOUT;
         }
       }
@@ -825,6 +911,16 @@ public class h2odriver extends Configured implements Tool {
       setShutdownRequested();
       driverCallbackSocket.close();
       driverCallbackSocket = null;
+    }
+    catch (Exception e) {
+      System.out.println("ERROR: " + (e.getMessage() != null ? e.getMessage() : "(null)"));
+      e.printStackTrace();
+    }
+
+    try {
+      if (! job.isComplete()) {
+        System.out.println("ERROR: Job not complete after cleanUpDriverResources()");
+      }
     }
     catch (Exception e) {
       System.out.println("ERROR: " + (e.getMessage() != null ? e.getMessage() : "(null)"));
@@ -888,9 +984,20 @@ public class h2odriver extends Configured implements Tool {
     conf.set(h2omapper.H2O_MAPPER_CONF_ARG_BASE + Integer.toString(mapperConfLength), name);
     conf.set(h2omapper.H2O_MAPPER_CONF_BASENAME_BASE + Integer.toString(mapperConfLength), value);
     conf.set(h2omapper.H2O_MAPPER_CONF_PAYLOAD_BASE + Integer.toString(mapperConfLength), payload);
+    mapperConfLength++;
   }
 
   private int run2(String[] args) throws Exception {
+    // Arguments that get their default value set based on runtime info.
+    // -----------------------------------------------------------------
+
+    // PermSize
+    // Java 7 and below need a larger PermSize for H2O.
+    // Java 8 no longer has PermSize, but rather MetaSpace, which does not need to be set at all.
+    if (javaMajorVersion <= 7) {
+      mapperPermSize = "256m";
+    }
+
     // Parse arguments.
     // ----------------
     parseArgs (args);
@@ -945,19 +1052,26 @@ public class h2odriver extends Configured implements Tool {
       conf.set("mapreduce.map.memory.mb", mapreduceMapMemoryMb);
 
       // MRv1 standard options, but also required for YARN.
-      String mapChildJavaOpts =
-              "-Xms" + mapperXmx
-              + " -Xmx" + mapperXmx
-              + (enableExceptions ? " -ea" : "")
-              + (enableVerboseGC ? " -verbose:gc" : "")
-              + (enablePrintGCDetails ? " -XX:+PrintGCDetails" : "")
-              + (enablePrintGCTimeStamps ? " -XX:+PrintGCTimeStamps" : "")
-              + (enableVerboseClass ? " -verbose:class" : "")
-              + (enablePrintCompilation ? " -XX:+PrintCompilation" : "")
-              + (enableExcludeMethods ? " -XX:CompileCommand=exclude,water/fvec/NewChunk.append2slowd" : "")
-              + (enableLog4jDefaultInitOverride ? " -Dlog4j.defaultInitOverride=true" : "")
-              + (enableDebug ? " -agentlib:jdwp=transport=dt_socket,server=y,suspend=" + (enableSuspend ? "y" : "n") + ",address=" + debugPort : "")
+      StringBuilder sb = new StringBuilder()
+              .append("-Xms").append(mapperXmx)
+              .append(" -Xmx").append(mapperXmx)
+              .append(((mapperPermSize != null) && (mapperPermSize.length() > 0)) ? (" -XX:PermSize=" + mapperPermSize) : "")
+              .append((enableExceptions ? " -ea" : ""))
+              .append((enableVerboseGC ? " -verbose:gc" : ""))
+              .append((enablePrintGCDetails ? " -XX:+PrintGCDetails" : ""))
+              .append((enablePrintGCTimeStamps ? " -XX:+PrintGCTimeStamps" : ""))
+              .append((enableVerboseClass ? " -verbose:class" : ""))
+              .append((enablePrintCompilation ? " -XX:+PrintCompilation" : ""))
+              .append((enableExcludeMethods ? " -XX:CompileCommand=exclude,water/fvec/NewChunk.append2slowd" : ""))
+              .append((enableLog4jDefaultInitOverride ? " -Dlog4j.defaultInitOverride=true" : ""))
+              .append((enableDebug ? " -agentlib:jdwp=transport=dt_socket,server=y,suspend=" + (enableSuspend ? "y" : "n") + ",address=" + debugPort : ""))
               ;
+      for (String s : extraJvmArguments) {
+        sb.append(" ").append(s);
+      }
+
+      String mapChildJavaOpts = sb.toString();
+
       conf.set("mapreduce.map.java.opts", mapChildJavaOpts);
       if (! usingYarn()) {
         conf.set("mapred.child.java.opts", mapChildJavaOpts);
@@ -1024,6 +1138,9 @@ public class h2odriver extends Configured implements Tool {
     if (hashLogin) {
       addMapperArg(conf, "-hash_login");
     }
+    if (ldapLogin) {
+      addMapperArg(conf, "-ldap_login");
+    }
     addMapperArg(conf, "-user_name", userName);
 
     for (String s : extraArguments) {
@@ -1062,9 +1179,9 @@ public class h2odriver extends Configured implements Tool {
     job.submit();
     System.out.println("Job name '" + jobtrackerName + "' submitted");
     System.out.println("JobTracker job ID is '" + job.getJobID() + "'");
-    hadoopJobID = job.getJobID().toString();
-    String applicationID = hadoopJobID.replace("job_", "application_");
-    System.out.println("For YARN users, logs command is 'yarn logs -applicationId " + applicationID + "'");
+    hadoopJobId = job.getJobID().toString();
+    applicationId = hadoopJobId.replace("job_", "application_");
+    maybePrintYarnLogsMessage(false);
 
     // Register ctrl-c handler to try to clean up job when possible.
     ctrlc = new CtrlCHandler();
@@ -1072,8 +1189,7 @@ public class h2odriver extends Configured implements Tool {
 
     System.out.printf("Waiting for H2O cluster to come up...\n");
     int rv = waitForClusterToComeUp();
-    if ((rv == CLUSTER_ERROR_TIMEOUT)
-        ||
+    if ((rv == CLUSTER_ERROR_TIMEOUT) ||
         (rv == CLUSTER_ERROR_JOB_COMPLETED_TOO_EARLY)) {
       // Try to print YARN diagnostics.
       try {
@@ -1093,7 +1209,7 @@ public class h2odriver extends Configured implements Tool {
           if (queueName == null) {
             queueName = "default";
           }
-          method.invoke(null, applicationID, queueName, numNodes, (int)processTotalPhysicalMemoryMegabytes, numNodesStarted.get());
+          method.invoke(null, applicationId, queueName, numNodes, (int)processTotalPhysicalMemoryMegabytes, numNodesStarted.get());
         }
 
         return rv;
@@ -1107,11 +1223,6 @@ public class h2odriver extends Configured implements Tool {
       }
 
       System.out.println("ERROR: H2O cluster failed to come up");
-
-      if (job.isComplete()) {
-        ctrlc.setComplete();
-      }
-
       return rv;
     }
     else if (rv != 0) {
@@ -1121,7 +1232,6 @@ public class h2odriver extends Configured implements Tool {
 
     if (job.isComplete()) {
       System.out.println("ERROR: H2O cluster failed to come up");
-      ctrlc.setComplete();
       return 2;
     }
 
@@ -1131,12 +1241,16 @@ public class h2odriver extends Configured implements Tool {
       // status stuff in H2O has settled down.
       Thread.sleep(CLOUD_FORMATION_SETTLE_DOWN_SECONDS);
 
+      System.out.println("Open H2O Flow in your web browser: " + getClusterUrl());
       System.out.println("Disowning cluster and exiting.");
       Runtime.getRuntime().removeShutdownHook(ctrlc);
       return 0;
     }
 
     System.out.println("(Note: Use the -disown option to exit the driver after cluster formation)");
+    System.out.println("");
+    System.out.println("Open H2O Flow in your web browser: " + getClusterUrl());
+    System.out.println("");
     System.out.println("(Press Ctrl-C to kill the cluster)");
     System.out.println("Blocking until the H2O cluster shuts down...");
     waitForClusterToShutdown();
@@ -1188,6 +1302,7 @@ public class h2odriver extends Configured implements Tool {
    */
   public static void main(String[] args) throws Exception {
     int exitCode = ToolRunner.run(new h2odriver(), args);
+    maybePrintYarnLogsMessage();
     System.exit(exitCode);
   }
 }
